--- a/styles.sass
+++ b/styles.sass
@@ -86,6 +86,7 @@
 
 .pullout-stat-body
   font-size: modular-scale(1)
+  font-family: $heading-font-family
   line-height: $heading-line-height
 
 
